--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,6 @@
 
 .sidebar{
   color: #fff;
-
 }
 
 .logo{
@@ -34,4 +33,28 @@
   font-size: 1.5;
   border-radius: 50%;
   background: rgba(28, 17, 41, 0.88);
+}
+
+.menu-bar {
+  height: 88vh;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-size: 1rem;
+}
+
+.toggle-theme-button {
+  position: absolute;
+  bottom: 30px;
+  left: 20px;
+  display: flex;
+  background-color: transparent;
+  color: #000;
+  border: 1px solid #000000;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
 }
