--- a/src/index.css
+++ b/src/index.css
@@ -20,19 +20,18 @@
   align-items: center;
   justify-content: center;
   color: #fff;
-  padding: 10px;
-  z-index: 1000;
+  padding: 4px;
 }
 
 .logo-icon{
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.5;
+  font-size: 2rem;
   border-radius: 50%;
-  background: rgba(28, 17, 41, 0.88);
+  background: rgba(1, 18, 79, 0.88);
 }
 
 .menu-bar {
