--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 
 .sidebar{
   color: #fff;
+  border: 1px solid #000000;
 }
 
 .logo{
@@ -46,7 +47,7 @@
 .toggle-theme-button {
   position: absolute;
   bottom: 30px;
-  left: 20px;
+  left: 15px;
   display: flex;
   background-color: transparent;
   color: #000;
